--- a/front/app/index.tpl.html
+++ b/front/app/index.tpl.html
@@ -1,18 +1,17 @@
 <!doctype html>
 <html lang="pl">
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>SajRoz RESTAURANT</title>
-        <meta name="description" content="Projekt aplikacji internetowej na zajecia z przedmiotu 'Aplikacje internetowe - WAT'">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>SajRoz RESTAURANT</title>
+    <meta name="description"
+          content="Projekt aplikacji internetowej na zajecia z przedmiotu 'Aplikacje internetowe - WAT'">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-    <body>
-        <div id="root">
-            App works!!!
-        </div>
-    </body>
+<body>
+<div id="root"></div>
+</body>
 
 </html>
