Added images and sidebar panel

--- a/front/app/index.tpl.html
+++ b/front/app/index.tpl.html
@@ -8,6 +8,7 @@
     <meta name="description"
           content="Projekt aplikacji internetowej na zajecia z przedmiotu 'Aplikacje internetowe - WAT'">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../images/head_icon.png">
 </head>
 
 <body>
