--- a/front/app/index.tpl.html
+++ b/front/app/index.tpl.html
@@ -8,7 +8,7 @@
     <meta name="description"
           content="Projekt aplikacji internetowej na zajecia z przedmiotu 'Aplikacje internetowe - WAT'">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../assets/head_icon.png">
+    <link rel="icon" href="../assets/images/head_icon.png">
 </head>
 
 <body>
