--- a/front/app/index.tpl.html
+++ b/front/app/index.tpl.html
@@ -8,6 +8,7 @@
     <meta name="description"
           content="Projekt aplikacji internetowej na zajecia z przedmiotu 'Aplikacje internetowe - WAT'">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="icon" href="../assets/images/head_icon.png">
 </head>
 
